--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@ MAX_MEMORY_STORE=1GB
 MAX_LIFE_STORE=10GB
 
 #безопасность
-NATS_USERNAME=Admin123
-NATS_PASSWORD=1106ROOT
+NATS_USERNAME=
+NATS_PASSWORD=
 
 #логирование
 LOG_LEVEL=debug
